--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "css/bootstrap.css">
-    <link rel = "stylesheet" href = "css/styles.css">
-    <script src = "js/jquery.js"></script>
-    <script src = "js/scripts.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <style>
+        .for-btn:hover {
+            background-color: darkblue;
+            color: white;
+            transition: 0.5s ease;
+        }
+    </style>
     <title>Pratice1</title>
 </head>
-<body>
-    
+
+<body style="background-color:#8c9799;">
+    <div class="container">
+        <form id="form-one">
+            <h1 class="text-center" style="color:darkblue">JavaSript Tutorial</h1>
+            <h5 style="color:darkblue">Fill the questions below to proceed.......</h5><br>
+            <div class="form-group">
+                <label for="name">What is Your Name</label>
+                <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+                <label for="Address">What is Your Address</label>
+                <input type="text" class="form-control" id="address">
+            </div>
+            <div class="form-group">
+                <label for="date">What is todays date</label>
+                <input type="text" class="form-control" id="date">
+            </div>
+            <div class="form-group">
+                <label for="title">Input The Title Of The Letter</label>
+                <input type="text" class="form-control" id="title">
+            </div>
+            <button type="submit" class="btn for-btn" style="border-color: darkblue;">Submit</button>
+        </form>
+        <div class="jumbotron">
+                <P class="float-left "><span class="address"></span><br><span class="name"></span><br>
+                <span class="date"></span></p><br><br><br><br>
+                <p class="float-left">C.E.O Of Danny Projects And Development<br>No,16 danivielle estate<br>New York City
+                </p><br>
+                
+        </div>
+    </div>
 </body>
+
 </html>
