Write the actions for the letter and form

--- a/index.html
+++ b/index.html
@@ -42,13 +42,61 @@
             </div>
             <button type="submit" class="btn for-btn" style="border-color: darkblue;">Submit</button>
         </form>
-        <div class="jumbotron">
-                <P class="float-left "><span class="address"></span><br><span class="name"></span><br>
-                <span class="date"></span></p><br><br><br><br>
-                <p class="float-left">C.E.O Of Danny Projects And Development<br>No,16 danivielle estate<br>New York City
-                </p><br>
-                
+        <div class="jumbotron" id="letter">
+            <P class="float-left "><span class="address"></span><br><span class="name"></span><br>
+                <span class="date"></span>
+            </p><br><br><br><br>
+            <p class="float-left">C.E.O Of Danny Projects And Development<br>No,16 danivielle estate<br>New York City
+            </p><br><br><br><br>
+            <h5 class="float-left">Dear <span class="name"></span></h5><br><br>
+            <h4 class="title text-center">uuuuuuuuuuuuuuuuuuuuuuuuuuuuu</h4>
+            <p>This letter is to congratulate you on signing up for the beginners javascript course you
+                have been sucessfully admitted into Danny Projects and Developments,Danny Projects and Developments is a
+                company which trains people on programming and web design , you will first be learning about html
+                and css
+                and after completing this course, you will move on to the beginners javascript course and after that ,
+                you
+                will move on to the intermediate javascript course. To Start this course click on the Begin Course
+                button below
+                <br><b>Congratulations Once again </b>
+            </p>
+            <button class="btn btn-outline-dark">Begin Course</button>
         </div>
+        <div id="flipcard">
+            <h4>Introduction To Web Design</h4>
+            <div class="row">
+                <!-- Web Design  -->
+                <div class="col-md-3">
+                    <div class="card" id="web-intro">
+                        <div class="card-title">
+                            <h5 class="text-danger text-center mt-3">What Is Web Design</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Click the button below to learn about Web Design</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-danger btn-block">Click Here</button>
+                        </div>
+                    </div>
+                    <div class="card" id="web-exp">
+                        <div class="card-title">
+                            <h5 class="text-danger text-center mt-3">What Is Web Design</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Web Design is a course which teaches people on how website are developed and how 
+                                they interact which each other. Websites are divided into two parts that is frontend and backend.
+                                We will be talking about the frontend.The frontend is divided into HTML,CSS and javascript
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-danger">Hide</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
