Create The Remaining Column

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 button below
                 <br><b>Congratulations Once again </b>
             </p>
-            <button class="btn btn-outline-dark">Begin Course</button>
+            <button class="btn btn-outline-dark" >Begin Course</button>
         </div>
         <div id="flipcard">
             <h4>Introduction To Web Design</h4>
@@ -75,7 +75,7 @@
                             <p>Click the button below to learn about Web Design</p>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-outline-danger btn-block">Click Here</button>
+                            <button class="btn btn-outline-danger btn-block" id="for-web">Click Here</button>
                         </div>
                     </div>
                     <div class="card" id="web-exp">
@@ -89,10 +89,69 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-outline-danger">Hide</button>
+                            <button class="btn btn-outline-danger" id="for-web-hide">Hide</button>
                         </div>
                     </div>
 
+                </div>
+                <div class="col-md-3">
+                    <div class="card"id="html-intro">
+                        <div class="card-title" >
+                            <h5 class="text-center text-primary mt-3">HTML</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Click the button below to learn more about HTML</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-primary btn-block" id="html-btn-show">Click Here</button> 
+                        </div>
+                    </div>
+                    <div class="card" id="html-show">
+                        <div class="card-title">
+                            <h5 class="text-center text-primary mt-3">HTML</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>HTML stands for HyperText Markup Language,it is a frontend markup language which is used to build blocks and tags for 
+                                a website.It works with other languages like css and javascript.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-primary" id="html-btn-hide">Hide</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" id="css-hide">
+                        <div class="card-title">
+                            <h5 class="text-warning text-center mt-3">CSS</h5>
+                        </div>
+                        <div class = "card-body">
+                            <p>Click on the button below to learn more about CSS</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn-outline-warning btn-block btn" id="btn-css-click">Click Here</button>
+                        </div>
+                    </div>
+                    <div class="card" id="css-show">
+                        <div class="card-title">
+                            <h5 class="text-warning text-center mt-3">CSS</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>CSS stands for Cascading StyleSheet. It is a language that is used for styling html elements.It is the one that makes
+                                the website beautiful and presentable.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-warning" id="btn-css-hide">Hide</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-title">
+                            <h5 class="text-center text-">javascript</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
