--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 button below
                 <br><b>Congratulations Once again </b>
             </p>
-            <button class="btn btn-outline-dark" >Begin Course</button>
+            <button class="btn btn-outline-dark" id="begin-course">Begin Course</button>
         </div>
         <div id="flipcard">
-            <h4>Introduction To Web Design</h4>
-            <div class="row">
+            <h1 class="mt-3 text-center ">Introduction To Web Design</h1>
+            <div class="row mt-5">
                 <!-- Web Design  -->
                 <div class="col-md-3">
                     <div class="card" id="web-intro">
@@ -147,9 +147,29 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card" id="js-intro">
                         <div class="card-title">
-                            <h5 class="text-center text-">javascript</h5>
+                            <h5 class="text-center text-success mt-3">Javascript</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Click the button to learn more about CSS</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-success btn-block" id="btn-js-click">Click Here</button>
+                        </div>
+                    </div>
+                    <div class="card" id="js-exp">
+                        <div class="card-title">
+                            <h5 class="text-center text-success mt-3">Javascript</h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Javascript is a general purpose language which is use to make your website more 
+                                function. Its second name is ECMA script(European Computer Manufacturer Association Script)
+                                .It was invented by Brendan Eich
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-success" id="btn-js-hide">Hide</button>
                         </div>
                     </div>
                 </div>
